RESOLVED FIXED271163
http/tests/site-isolation/draw-after-navigation.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=271163
Summary http/tests/site-isolation/draw-after-navigation.html is flaky
Charlie Wolfe
Reported 2024-03-18 10:28:22 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-18 10:28:36 PDT
Charlie Wolfe
Comment 2 2024-03-18 10:29:33 PDT
EWS
Comment 3 2024-03-18 15:04:31 PDT
Committed 276303@main (dc87670c0188): <https://commits.webkit.org/276303@main> Reviewed commits have been landed. Closing PR #26056 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.