http/tests/site-isolation/draw-after-navigation.html is flaky https://bugs.webkit.org/show_bug.cgi?id=271163 rdar://124956252

Reviewed by Alex Christensen.

275592@main accidentally made the ForceRepaint message only sent to the main frame process.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::forceRepaint):

Canonical link: https://commits.webkit.org/276303@main